src/css/style.css
/* ... */
@media only screen and (max-width:784px) {
  .code-project-header {
    flex-direction:column;
    align-items:flex-start;
    margin-bottom:2em;
  }

  .code-project-header div {
    max-width:unset;
  }

  .call-to-action {
    max-width:100%;
    padding: 5em 3vw;
  }
}

.project-details li {
  margin:0.6em 0;
  line-height:1.4em;
}

/* PHOTO GRIDS */

photo-grid {
  display:grid;
  gap:1.2em;
}

photo-grid * {
  min-width:0;
}

photo-grid:not(.tarot) {
  justify-items:stretch;
  margin-bottom:var(--line-height-em);
}

photo-grid.tarot {
  gap:4rem;
  margin:2rem 0;
  border-radius:10px;
  justify-items:center;
  padding:5.5rem 0 5rem;
  background-color:none;
  transition:background-color 1s;
}

photo-grid.vertical, photo-grid.two-column, photo-grid.three-column {
  margin-top:var(--line-height-em);
}

photo-grid.two-column img, photo-grid.three-column img {
  max-width:100%;
}

@media only screen and (min-width:501px) {
  photo-grid.tarot img {
    max-width:400px;
    max-height:95vh;
    width:auto;
    height:auto;
  }
}

@media only screen and (min-width:785px) {
  photo-grid.tarot{
    background-color:var(--subtle-bg-color);
    transition:background-color 1s;
  }
}

@media only screen and (max-width:500px) {
  photo-grid.tarot {
    padding:2rem 0;
  }
  photo-grid.tarot img {
    max-width:100%;
    max-height:85vh;
    width:auto;
    height:auto;
  }
}

photo-grid:not(.tarot) img {
  margin-bottom:0;
  max-height:1080px;
}

photo-grid a:not(.lightbox-ignore) {
  line-height:1;
  cursor:zoom-in;
}

photo-grid img {
  min-width:100%;
}

@media only screen and (max-width:625px) {
  photo-grid.three-column:has(.video-grid-item) {
    grid-template-columns:1fr 1fr;
  }
}

@media only screen and (min-width:501px) {
  photo-grid.two-column {
    grid-template-columns:1fr 1fr;
  }
  photo-grid.two-column .full-width {
    grid-column:span 2;
  }
  photo-grid.three-column {
    grid-template-columns:1fr 1fr 1fr;
  }
  photo-grid.three-column .full-width {
    grid-column:span 3;
  }
}

@media only screen and (max-width:500px) {
  photo-grid.two-column, photo-grid.three-column, photo-grid.three-column:has(.video-grid-item) {
    grid-template-columns:1fr;
  }
}

photo-grid .video-grid-item a img {
  aspect-ratio: 4 / 3 !important;
  object-fit:cover;
  border-radius:10px;
}

photo-grid .video-thumb-caption {
  margin-top:0.3em;
  background:var(--unsubtle-bg-color);
  padding:0.2em 0.5em 0.5em;
  border-radius:10px;
}

photo-grid .video-thumb-caption h5 {
  font-size:1em;
  margin:0.5em;
}

photo-grid .video-thumb-caption ul {
  margin:0.5em;
  padding-left:3ch;
  font-size:1rem;
}

photo-grid .video-thumb-caption li {
  margin:0.2em 0;
}

/* VIDEOS */

.video-container {
  width:100%;
  height:auto;
  margin-top:var(--line-height-em);
  margin-bottom:var(--line-height-em);
}

video {
  border-radius:5px;
  margin-bottom:0.5em;
  margin-left:auto;
  margin-right:auto;
}

.video-iframe-container {
  margin-bottom:0.5em;
  background:#000000;
  border-radius:5px;
  margin-left:auto;
  margin-right:auto;
}

.video-container iframe {
  position:absolute;
  top:0;
  left:0;
  bottom:0;
  right:0;
  width:100%;
  height:100%;
}

video.html-video-fallback {
  display:none;
}

@media (scripting:none) {
  video.html-video-fallback {
    display:block;
  }
  .video-iframe-container {
    display:none;
  }
}

.video-caption {
  margin-top:0.2em;
  text-align:center;
  background-color:var(--unsubtle-bg-color);
  border-radius:5px;
  padding:0.1em 1em 0.2em;
  font-size:1rem;
}

.two-channel-video {
  width:100%;
  margin:1.5em 0 3em;
  display:flex;
  box-sizing:border-box;
  gap:0;
  flex-direction:row;
}

.two-channel-video .video-container, .two-channel-video .video-container .video-iframe-container, .two-channel-video .video-container .html-video-fallback {
  margin:0;
}

@media only screen and (max-width:784px) {
  .two-channel-video {
    flex-direction:column;
  }
}

/* CV & resume */

.cv h2, .resume h2 {
  font-size:1.5em;
}

.cv h3, .resume h3 {
  border-bottom:2px dotted;
  margin-top:1.5em;
  font-size:1.2em;
}

.cv h4 {
  border-bottom:2px dotted;
  margin-top:1.5em;
  font-size:0.9em;
  letter-spacing:0.05ch;
  opacity:0.4;
  font-style:italic;
}

.cv p {
  text-indent:-6ch;
  margin-left:6ch;
}

.cv .year {
  font-weight:var(--bold-weight);
  display:inline-block;
  text-indent:0;
  min-width:5ch;
}

.cv p.subtitle, .resume p.subtitle {
  text-indent:0;
  margin-left:0;
  display:flex;
  flex-wrap:wrap;
}

.cv p.subtitle * {
  text-indent:0;
  margin-left:0;
}

.resume ul {
  margin-top:0.2em;
}

.resume li {
  margin-bottom:0.2em;
}

resume-org {
  display:flex;
  flex-wrap:nowrap;
  gap:1em;
  align-items:center;
}

resume-org img {
  width:2em;
  height:2em;
  filter:var(--teal-filter);
}

resume-org h4 {
  font-size:1.1em;
  margin:0.5em 0;
  font-weight:var(--black-weight);
}

resume-role {
  display:flex;
  flex-wrap:wrap;
  align-items:baseline;
  gap:0.2em 1.2ch;
  margin:0.2em 0;
}

resume-role *:first-child {
  font-weight:var(--bold-weight);
}

resume-role *:last-child {
  font-style:italic;
  font-size:var(--small-font-size);
  font-weight:var(--black-weight);
  text-transform:uppercase;
  min-height:1.6rem;
  filter:var(--teal-filter);
}

.resume .skills {
  display:flex;
  flex-wrap:wrap;
  gap:0 0.8ch;
}

/* TABLE OF CONTENTS */

.table-of-contents {
  margin-bottom:2em;
}

.table-of-contents ul {
  margin-top:0;
  padding-bottom:0;
}

.table-of-contents li {
  margin:0;
}

.active {
  pointer-events:none;
}

/* FORMS */

form {
  width:100%;
  max-width:450px;
  margin: 2em 0;
}

form label {
  display:block;
}

form input {
  width:100%;
  box-sizing:border-box;
  height:2em;
  border:1.5px solid;
  border-radius:5px;
  margin:1em 0;
  font-size:1em;
  font-family:Menlo, Monaco, Consolas, Liberation Mono, Lucida Console, monospace;
  display:block;
}

form input[type=checkbox] {
  margin:0 0 1em;
  width:1.2em;
  height:1.2em;
  display:inline-block;
}
/* ... */

